Update deploy workflow and add README screenshots

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.html'
+      - '**.css'
+      - '**.js'
+      - 'images/**'
+      - '!images/readme/**'
+      - '!README.md'
+      - '!**/.github/**'
 
 permissions:
   id-token: write
